# muds_hackson_back

./: .env.local.example  .env.production.example  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  claude.md  docker-compose.yml  instanceD_complete_validation_results.json  integration_example.py  paas_api.py  paas_api_with_auth.py  pyproject.toml  render.yaml  simple_integration_test.py  test_google_drive_desktop.py  test_google_drive_simple.py  test_google_drive_sync.py  test_instanceD_complete_validation.py  test_integration.py  test_paas_integration.py  test_paas_integration_instanceD.py  web_app.py  指示書.md
agent/: README.md  __init__.py  config.py  data_manager.py  database_handler.py  file_processor.py  main.py  metadata_extractor.py  requirements.txt  search_engine.py
agent/api/: data_api.py  search_api.py  upload_api.py
agent/consultation/: advisor.py  chat_manager.py  llm_advisor.py  recommender.py
agent/data_management/: __init__.py  batch_operations.py  data_manager.py  data_operations.py  dataset_manager.py  export_operations.py
agent/database/: research_data.db
agent/interfaces/: __init__.py  cli_interface.py  web_interface.py
agent/processing/: __init__.py  content_extractors.py  file_processor.py  gemini_analyzer.py
agent/search/: __init__.py  query_parser.py  result_processor.py  search_engine.py  similarity_calculator.py
agent/tests/: run_instance_e_integration_tests.py  test_api.py  test_config.py  test_config_manager_module.py  test_database.py  test_error_handling_fallback.py  test_google_drive_integration.py  test_google_drive_module.py  test_indexer.py  test_input_ports_module.py  test_instance_e_end_to_end.py  (+6 more)
backups/: backup_20250704_010349_config.json
docs/: 20250703_deployment_critical_issues.md  20250703_frontend_implementation_strategy.md  20250703_need_improve.md  20250703_parallel_development_interfaces.md  20250703_production_deployment_strategy.md  google_drive_integration_guide.md  hoge
migration/: sqlite_to_postgresql.py
scripts/: deploy.sh
services/: enhanced_rag_interface.py  rag_interface.py
sql/: init.sql
templates/: index.html
tools/: config.py  integration_example.py  main.py
(+71 files in other folders)
