[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-data-management"
version = "0.1.0"
description = "Research Data Management System with Google Gemini API"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.3.0",
    "pandas>=2.0.0",
    "PyPDF2>=3.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
research-manager = "agent.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["agent/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"


[tool.hatch.build.targets.wheel]
packages = ["agent"]